@@ -1,4 +1,4 @@
-$Id: History,v 1.70 2000-05-02 10:16:26 johna Exp $
+$Id: History,v 1.71 2000-05-04 08:52:01 johna Exp $
 -------------------------------------------------------------------
 
      =========================================================
@@ -23,6 +23,9 @@ committal in the CVS repository !
 
 History file for visualization category
 ---------------------------------------
+
+4th May 2000  John Allison
+- Tidied comments in G4VisManagerRegisterMessengers.cc
 
 2nd May 2000  John Allison  vis-V01-01-02
 - Added /vis/viewer/reset.
